--- a/src/dropdown/styles.css
+++ b/src/dropdown/styles.css
@@ -1,20 +1,38 @@
-.dropdown__menu {
+.dropdown {
+  width: min-content;
+}
+
+.dropdown-menu {
+  position: absolute;
+  margin: 0;
+  border: 1px solid var(--grey-tint-3);
+  background-color: var(--white);
+  z-index: 10;
+  opacity: 0;
+  transition: all 150ms;
   transform-origin: top;
   transform: perspective(1000px) rotateX(-90deg);
-  @apply absolute border bg-white z-10;
-  @apply transition duration-150 opacity-0;
 }
 
-.dropdown__menu--active {
+.dropdown-menu-active {
+  opacity: 100;
+  transition: all 150ms;
   transform: perspective(1000px) rotateX(0deg);
-  @apply transition duration-150 opacity-100;
 }
 
-.dropdown__item {
-  @apply px-6 py-2 select-none;
-  @apply transition duration-200;
+.dropdown-item {
+  margin: 0;
+  padding: 0.5rem 1.5rem;
+  user-select: none;
+  cursor: pointer;
+  transition: all 200ms;
 }
 
-.dropdown__item:hover {
-  @apply bg-gray-6 transition duration-200;
+.dropdown-item:hover {
+  background-color: var(--grey-tint-2);
+  transition: all 200ms;
+}
+
+.dropdown-toggle {
+  width: min-content;
 }
