--- a/src/form/styles.css
+++ b/src/form/styles.css
@@ -1,21 +1,27 @@
-.app__form {
-  @apply mb-20;
+.form {
+  margin-bottom: 5rem;
 }
-.form__title {
-  @apply mb-1;
+
+.form-title {
+  margin-bottom: 0.25rem;
 }
-.form__description {
-  @apply text-gray-3;
+
+.form-description {
+  color: var(--grey-shade-2);
 }
-.form__section {
-  @apply my-16;
+
+.form-section {
+  margin: 4rem 0;
 }
-.form__footer {
-  @apply mb-16;
+
+.form-footer {
+  margin-bottom: 4rem;
 }
-.form__footer > * {
-  @apply mr-8;
+
+.form-footer > * {
+  margin-right: 2rem;
 }
-.form__legend {
-  @apply mb-4;
+
+.form-legend {
+  margin-bottom: 1rem;
 }
