--- a/src/toolbar/styles.css
+++ b/src/toolbar/styles.css
@@ -1,7 +1,21 @@
-.app__toolbar {
-  @apply py-10;
+.toolbar {
+  display: flex;
 }
 
-.app__toolbar > button.app__button {
-  @apply mr-10;
+.toolbar.row {
+  flex-direction: row;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.toolbar.row > * {
+  margin-right: 2.5rem;
+}
+
+.toolbar.column {
+  flex-direction: column;
+}
+
+.toolbar.toolbar.column > * {
+  margin-bottom: 2.5rem;
 }
