--- a/src/field/styles.css
+++ b/src/field/styles.css
@@ -1,15 +1,18 @@
+/*-----------
+    Field
+-----------*/
 .field {
   margin-bottom: 0.75rem;
 }
 
-.field-label {
+.field > .label {
   display: block;
   font-size: 0.85rem;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.1rem;
   color: var(--grey-shade-2);
 }
 
-.field-message {
+.field > .message {
   display: block;
   margin-top: 0.25rem;
   font-size: 0.85rem;
