--- a/src/form/styles.css
+++ b/src/form/styles.css
@@ -1,27 +1,31 @@
+/*----------
+    Form
+----------*/
 .form {
   margin-bottom: 5rem;
 }
 
-.form-title {
+.form > .title {
   margin-bottom: 0.25rem;
 }
 
-.form-description {
-  color: var(--grey-shade-2);
+.form > .description {
+  color: var(--grey-shade-1);
 }
 
-.form-section {
+.form > .section {
   margin: 4rem 0;
 }
 
-.form-footer {
+.form > .section > .label {
+  color: var(--grey-shade-3);
+  margin-bottom: 1rem;
+}
+
+.form > .footer {
   margin-bottom: 4rem;
 }
 
-.form-footer > * {
+.form .footer > * {
   margin-right: 2rem;
-}
-
-.form-legend {
-  margin-bottom: 1rem;
 }
