--- a/src/modal/styles.css
+++ b/src/modal/styles.css
@@ -1,40 +1,30 @@
 .modal {
   display: flex;
-  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--white);
-  opacity: 0;
-  z-index: -1;
-}
-
-.modal-active {
   background-color: rgba(255, 255, 255, 0.95);
-  transition: all 200ms;
-  opacity: 100;
   z-index: 50;
 }
 
-.modal-container {
+.modal > .container {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   position: relative;
   margin-top: 2rem;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 2rem;
 }
 
-.modal-container > * {
-  margin-left: 1rem;
+.modal > .container > .close-button {
+  position: absolute;
+  right: 0;
   margin-right: 1rem;
 }
 
-.modal-close-button {
-  position: absolute;
-  top: 0;
-  right: 0;
+.modal > .container > .section {
+  margin-top: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
