--- a/src/pagination/styles.css
+++ b/src/pagination/styles.css
@@ -1,27 +1,25 @@
+/*----------------
+    Pagination
+----------------*/
 .pagination {
   display: flex;
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
 }
 
-.pagination-item {
-  padding: 0.5rem;
+.pagination > .item {
+  padding: 0.5rem 0.75rem;
   margin-right: 2rem;
   border-radius: 0.125rem;
   cursor: pointer;
   user-select: none;
 }
 
-.pagination-item-active {
-  margin-right: 2rem;
-  padding: 0.5rem;
+.pagination > .item.active {
   background-color: var(--light);
-  border-radius: 0.125rem;
-  cursor: pointer;
-  user-select: none;
 }
 
-.pagination-ellipsis {
+.pagination > .ellipsis {
   margin-right: 2rem;
   padding: 0.5rem;
   user-select: none;
