--- a/src/select/styles.css
+++ b/src/select/styles.css
@@ -2,26 +2,36 @@
   display: flex;
   position: relative;
   width: 227px;
-  border: 1px solid var(--grey-tint-3);
-  appearance: none;
+  border: 1px solid var(--light);
+  outline: none;
   transition: all 200ms;
 }
 
 .select:hover {
   border-color: var(--grey-shade-3);
-  background-color: var(--grey-tint-3);
+  background-color: var(--light);
+  transition: all 200ms;
+}
+
+.select:hover .select-icon {
+  border-left: 1px solid var(--grey-shade-3);
   transition: all 200ms;
 }
 
 .select:focus-within {
   border: 1px solid var(--grey-shade-3);
-  background-color: var(--grey-tint-3);
+  background-color: var(--light);
+  transition: all 200ms;
+}
+
+.select:focus-within .select-icon {
+  border-left: 1px solid var(--grey-shade-3);
   transition: all 200ms;
 }
 
 .select-element {
   width: 100%;
-  height: 26px;
+  height: 25px;
   padding-left: 0.25rem;
   background-color: transparent;
   appearance: none;
@@ -39,6 +49,7 @@
   position: absolute;
   right: 0;
   height: 26px;
-  border-left: 1px solid var(--grey-tint-3);
+  border-left: 1px solid var(--light);
   z-index: 1;
+  transition: all 200ms;
 }
