--- a/src/titlebar/styles.css
+++ b/src/titlebar/styles.css
@@ -1,11 +1,17 @@
 .titlebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   margin-top: 0;
   margin-bottom: 0;
   padding: 1rem 1rem;
   border-bottom: 1px solid var(--light);
+  background-color: rgba(255, 255, 255, 95%);
   font-size: 1rem;
   color: var(--grey);
   user-select: none;
+  z-index: 10;
 }
 
 .titlebar-title {
@@ -13,7 +19,7 @@
 }
 
 /*------------
-Mobile
+    Tablet
 ------------*/
 @media (min-width: 640px) {
   .titlebar {
