--- a/src/flex/styles.css
+++ b/src/flex/styles.css
@@ -1,3 +1,6 @@
+/*----------
+    Flex
+----------*/
 .flex {
   display: flex;
   padding: 2rem 1rem 2rem 1rem;
@@ -13,4 +16,13 @@
 
 .flex.fullwidth {
   width: 100%;
+}
+
+/*------------
+    Tablet
+------------*/
+@media (min-width: 640px) {
+  .flex {
+    padding-top: 3rem;
+  }
 }
