--- a/src/sidebar/styles.css
+++ b/src/sidebar/styles.css
@@ -11,7 +11,7 @@
   top: 0;
   left: 0;
   right: 0;
-  padding: 1rem 1rem 4rem 1rem;
+  padding: 4rem 1rem 4rem 1rem;
   background-color: rgba(255, 255, 255, 95%);
 }
 
@@ -62,12 +62,14 @@
   .sidebar {
     position: static;
     width: 275px;
+    padding-top: 2rem;
     border-right: 1px solid var(--light);
   }
 
   .sidebar-content {
     display: block;
     position: static;
+    padding: 1rem 0 0 0;
   }
 
   .sidebar-item {
