--- a/src/titlebar/styles.css
+++ b/src/titlebar/styles.css
@@ -1,3 +1,6 @@
+/*--------------
+    Titlebar
+--------------*/
 .titlebar {
   position: fixed;
   top: 0;
@@ -14,7 +17,7 @@
   z-index: 20;
 }
 
-.titlebar-title {
+.titlebar > .title {
   display: none;
 }
 
@@ -23,14 +26,14 @@
 ------------*/
 @media (min-width: 640px) {
   .titlebar {
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
   }
 
-  .titlebar-title {
+  .titlebar > .title {
     display: block;
   }
 
-  .titlebar-abbr {
+  .titlebar > .abbr {
     display: none;
   }
 }
