--- a/src/sidebar/styles.css
+++ b/src/sidebar/styles.css
@@ -64,15 +64,13 @@
 ------------*/
 @media (min-width: 640px) {
   .sidebar {
-    padding-top: 2rem;
-    padding-left: 1rem;
     padding-right: 1rem;
   }
 
   .sidebar > .content {
     display: block;
     position: static;
-    padding: 1rem 0 0 0;
+    padding: 0;
   }
 
   .sidebar > .item,
