--- a/src/form/styles.css
+++ b/src/form/styles.css
@@ -10,7 +10,7 @@
   margin-bottom: 0.25rem;
 }
 
-.form > .description {
+.form > .desc {
   margin-top: 0;
   margin-bottom: 2rem;
   color: var(--grey-shade-1);
