--- a/src/select/styles.css
+++ b/src/select/styles.css
@@ -7,46 +7,41 @@
   width: 227px;
   border: 1px solid var(--light);
   outline: none;
-  transition: all 200ms;
+  transition: all 200ms ease;
 }
 
 .select:hover {
   border-color: var(--grey-shade-3);
   background-color: var(--light);
-  transition: all 200ms;
-}
-
-.select:hover .select-icon {
-  border-left: 1px solid var(--grey-shade-3);
-  transition: all 200ms;
+  transition: all 200ms ease;
 }
 
 .select:focus-within {
   border: 1px solid var(--grey-shade-3);
   background-color: var(--light);
-  transition: all 200ms;
+  transition: all 200ms ease;
 }
 
-.select:focus-within .select-icon {
-  border-left: 1px solid var(--grey-shade-3);
-  transition: all 200ms;
-}
-
-.select-element {
+/*-----------
+    Input
+-----------*/
+.select > .input {
   width: 100%;
   height: 26px;
   padding-left: 0.25rem;
   background-color: transparent;
   appearance: none;
-  -moz-appearance: none;
   z-index: 2;
 }
 
-.select-element::after {
+.select > .input::after {
   border: none;
 }
 
-.select-icon {
+/*----------
+    Icon
+----------*/
+.select > .icon {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -56,10 +51,15 @@
   width: 26px;
   border-left: 1px solid var(--light);
   z-index: 1;
-  transition: all 200ms;
+  transition: all 200ms ease;
 }
 
-.select-icon::after {
+.select:focus-within > .icon {
+  border-left: 1px solid var(--grey-shade-3);
+  transition: all 200ms ease;
+}
+
+.select > .icon::after {
   content: '';
   position: absolute;
   top: 6px;
@@ -69,4 +69,9 @@
   border-style: solid;
   border-color: var(--grey-shade-3);
   transform: rotate(45deg);
+}
+
+.select:hover > .icon {
+  border-left: 1px solid var(--grey-shade-3);
+  transition: all 200ms ease;
 }
