--- a/src/button/styles.css
+++ b/src/button/styles.css
@@ -116,3 +116,11 @@
   border: 2px solid var(--grey);
   background-color: var(--grey);
 }
+
+/*-----------------
+    Transparent
+-----------------*/
+.button.transparent {
+  background-color: rgba(0, 0, 0, 0);
+  border-color: rgba(0, 0, 0, 0);
+}
