--- a/src/sidebar/styles.css
+++ b/src/sidebar/styles.css
@@ -90,7 +90,8 @@
 ------------*/
 @media (min-width: 640px) {
   .sidebar {
-    width: 230px;
+    width: 250px;
+    min-width: 250px;
     padding-right: 1rem;
     padding-left: 1rem;
   }
